--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular-google-chart": "~0.0.11",
     "angular-material-icons": "~0.6.0",
     "angular-moment": "~0.10.3",
-    "moment": "~2.10.6"
+    "moment": "~2.10.6",
+    "ngstorage": "~0.3.9"
   }
 }
